Minor bug fixes to background image on mobile

--- a/src/home/pages/Home.css
+++ b/src/home/pages/Home.css
@@ -1,7 +1,8 @@
 .homeHeader {
+  /* background: url("../../images/waterfall.jpg") no-repeat center center fixed; */
   background-image: url("../../images/waterfall.jpg");
   background-repeat: no-repeat;
-  background-attachment: fixed;
+  /* background-attachment: fixed; */
   background-size: cover;
   background-position: center center;
   text-align: center;
@@ -9,6 +10,8 @@
   padding-bottom: 150px;
   color: white;
   margin-bottom: 2em;
+  /* min-width: 100%; */
+  /* min-height: 100%; */
 }
 
 .homeMain {
@@ -38,6 +41,19 @@
   .homeMain {
     display: block;
     overflow: auto;
+  }
+
+  .homeHeader {
+    background-image: url("../../images/waterfall.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: center center;
+    text-align: center;
+    padding-top: 150px;
+    padding-bottom: 150px;
+    color: white;
+    margin-bottom: 2em;
   }
 
   .col-container {
