--- a/src/shared/UIElements/SlideShow.css
+++ b/src/shared/UIElements/SlideShow.css
@@ -1,6 +1,6 @@
 /* Slideshow container */
 .slideshow-container {
-  max-width: 50%;
+  max-width: 100%;
   width: 100%;
   position: relative;
   overflow: auto;
@@ -28,6 +28,8 @@
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
   user-select: none;
+  background-color: transparent;
+  border: transparent;
 }
 
 /* Position the "next button" to the right */
@@ -40,6 +42,11 @@
 .prev:hover,
 .next:hover {
   background-color: rgba(0, 0, 0, 0.8);
+}
+.prev:focus,
+.next:focus {
+  background-color: transparent;
+  outline: none;
 }
 
 /* Caption text */
